--- a/adventure_finder/templates/account/login.html
+++ b/adventure_finder/templates/account/login.html
@@ -3,7 +3,7 @@
 {% load i18n %}
 {% load account socialaccount %}
 
-{% block head_title %}{% trans "Sign In" %}{% endblock %}
+{% block head_title %}{% trans "Sign In" %}{% endblock head_title %}
 
 {% block content %}
 
@@ -12,10 +12,34 @@
         <div class="col-md-8 mt-3 offset-md-2">
             <h3>{% trans "Sign In" %}</h3>
 
-            <p>{% blocktrans %}Welcome back to the code|star blog. To leave a comment or like a post, please log in. If
-                you
-                have not created an account yet, then <a class="link" href="{{ signup_url }}">sign up</a>
-                first.{% endblocktrans %}</p>
+            {% get_providers as socialaccount_providers %}
+
+            {% if socialaccount_providers %}
+            <p>{% blocktrans with site.name as site_name %}Please sign in with one
+            of your existing third party accounts. Or, <a href="{{ signup_url }}">sign up</a>
+            for a {{ site_name }} account and sign in below:{% endblocktrans %}</p>
+
+            <div class="socialaccount_ballot">
+
+                <ul class="socialaccount_providers">
+                    {% include "socialaccount/snippets/provider_list.html" with process="login" %}
+                </ul>
+
+                <div class="login-or">{% trans 'or' %}</div>
+
+                </div>
+
+                {% include "socialaccount/snippets/login_extra.html" %}
+
+                {% else %}
+
+                <p>{% blocktrans %}Welcome back to the adventure|finder blog. To leave a comment or like a post, please log in. If
+                    
+                    you
+                    have not created an account yet, then <a class="link" href="{{ signup_url }}">sign up</a>
+                    first.{% endblocktrans %}
+                </p>
+                {% endif %}
         </div>
     </div>
     <div class="row">
@@ -31,4 +55,4 @@
         </div>
     </div>
 </div>
-{% endblock %}
+{% endblock content %}
