--- a/adventure_finder/templates/base.html
+++ b/adventure_finder/templates/base.html
@@ -75,21 +75,56 @@
         <p class="text-end m-3">You are not logged in</p>
         {% endif %}
             <!-- Filter Tags Links -->
-            <div class="row mb-3">
-                <div class="col-12">
-                    <form method="POST" action="{% url 'post_list' %}">
-                        {% csrf_token %}
-                        <div class="d-flex flex-wrap">
-                            <!-- Example tag links or dropdown -->
-                            <a href="{% url 'post_list' %}" class="btn btn-outline-primary me-2">All Posts</a>
-                            <button type="submit" name="location" value="europe" class="btn btn-outline-primary me-2">Europe</button>
-                            <button type="submit" name="activity" value="hiking" class="btn btn-outline-primary me-2">Hiking</button>
-                            <button type="submit" name="type" value="blog" class="btn btn-outline-primary me-2">Blog</button>
+            <div class="container my-4">
+                <form method="get" action="{% url 'home' %}">
+                    <div class="row">
+                        <!-- Location Filter -->
+                        <div class="col-md-4">
+                            <label for="location">Location:</label>
+                            <select id="location" name="location" class="form-control">
+                                <option value="">All Locations</option>
+                                {% for location, name in location_choices %}
+                                <option value="{{ location }}" {% if location == current_filters.location %}selected{% endif %}>
+                                    {{ name }}
+                                </option>
+                                {% endfor %}
+                            </select>
                         </div>
-                    </form>
-                </div>
+                        
+                        <!-- Activity Filter -->
+                        <div class="col-md-4">
+                            <label for="activity">Activity:</label>
+                            <select id="activity" name="activity" class="form-control">
+                                <option value="">All Activities</option>
+                                {% for activity, name in activity_choices %}
+                                <option value="{{ activity }}" {% if activity == current_filters.activity %}selected{% endif %}>
+                                    {{ name }}
+                                </option>
+                                {% endfor %}
+                            </select>
+                        </div>
+                        
+                        <!-- Type Filter -->
+                        <div class="col-md-4">
+                            <label for="type">Type:</label>
+                            <select id="type" name="type" class="form-control">
+                                <option value="">All Types</option>
+                                {% for type, name in type_choices %}
+                                <option value="{{ type }}" {% if type == current_filters.type %}selected{% endif %}>
+                                    {{ name }}
+                                </option>
+                                {% endfor %}
+                            </select>
+                        </div>
+                    </div>
+                    <div class="row mt-3">
+                        <div class="col">
+                            <button type="submit" class="btn btn-primary">Filter</button>
+                            <a href="{% url 'home' %}" class="btn btn-secondary">Reset</a>
+                        </div>
+                    </div>
+                </form>
             </div>
-
 
 
 
