--- a/adventures/templates/adventures/index.html
+++ b/adventures/templates/adventures/index.html
@@ -37,19 +37,25 @@
             </div>
         </div>
     </div>
-    {% if is_paginated %}
-    <nav aria-label="Page navigation">
-        <ul class="pagination justify-content-center">
-            {% if page_obj.has_previous %}
-            <li><a href="?page={{ page_obj.previous_page_number }}" class="page-link"> PREV &raquo;</a></li>
-            {% endif %}
-            {% if page_obj.has_next %}
-            <li><a href="?page={{ page_obj.next_page_number }}" class="page-link"> NEXT &raquo;</a></li>
-            {% endif %}
-        </ul>
-    </nav>
-    {% endif %}
-</div>
+    <!-- Pagination -->
+<nav aria-label="Page navigation">
+    <ul class="pagination justify-content-center">
+        {% if post_list.has_previous %}
+        <li>
+            <a href="?page={{ post_list.previous_page_number }}&location={{ current_filters.location }}&activity={{ current_filters.activity }}&type={{ current_filters.type }}" class="page-link">
+                PREV
+            </a>
+        </li>
+        {% endif %}
+        {% if post_list.has_next %}
+        <li>
+            <a href="?page={{ post_list.next_page_number }}&location={{ current_filters.location }}&activity={{ current_filters.activity }}&type={{ current_filters.type }}" class="page-link">
+                NEXT
+            </a>
+        </li>
+        {% endif %}
+    </ul>
+</nav>
 
 <!-- index.html content ends here -->
 {% endblock %}
