adding editing and deleting functionality to comments

--- a/adventures/templates/adventures/post_detail.html
+++ b/adventures/templates/adventures/post_detail.html
@@ -67,6 +67,13 @@
             This comment is awaiting approval
           </p>
           {% endif %}
+          {% if user.is_authenticated and comment.user == user %}
+          <button class="btn btn-edit" comment_id="{{ comment.id }}">Edit</button>
+          {% elif user.is_authenticated and comment.author and comment.author.user == user %}
+          <button class="btn btn-edit" comment_id="{{ comment.id }}">Edit</button>
+          {% endif %}
+
+
         </div>
         <!-- Our for loop ends here -->
         {% endfor %}
@@ -145,3 +152,7 @@
     </div>
 </div>
 {% endblock content %}
+
+{% block extras %}
+<script src="{% static 'js/comments.js' %}"></script>
+{% endblock %}
