comments for code deleted whitespace

--- a/adventures/templates/adventures/post_detail.html
+++ b/adventures/templates/adventures/post_detail.html
@@ -6,9 +6,7 @@
     <div class="container">
         <div class="row g-0">
             <div class="col-md-6 masthead-text">
-                <!-- Post title goes in these h1 tags -->
                 <h1 class="post-title">{{ post.title }}</h1>
-                <!-- Post author goes before the | the post's created date goes after -->
                 <p class="post-subtitle">{{ post.author }} | {{ post.created_on }}</p>
             </div>
             <div class="d-none d-md-block col-md-6 masthead-image">
@@ -23,30 +21,12 @@
         </div>
     </div>
 </div>
-<p>{{ post_tags }}</p>  <!-- This will display the contents of post_tags -->
+<p>{{ post_tags }}</p>  
 
+<!--tags for posts-->
 <div class="row mt-4">
   <div class="col">
       <h5>Tags:</h5>
-     <!-- <ul>
-          {% for post_tag in post_tags %}
-              <li>
-                  {% with post_tag.tag as tag %}
-                      {% if tag.location %}
-                          <strong>Location:</strong> {{ tag.location }}
-                      {% endif %}
-                      {% if tag.activity %}
-                          <strong>Activity:</strong> {{ tag.activity }}
-                      {% endif %}
-                      {% if tag.type_choices %}
-                          <strong>Type:</strong> {{ tag.type_choices }}
-                      {% endif %}
-                  {% endwith %}
-              </li>
-          {% empty %}
-              <li>No tags available.</li>
-          {% endfor %}
-      </ul> -->
       <ul>
         {% for post_tag in post_tags %}
             <li>
@@ -73,8 +53,6 @@
     <div class="row">
         <div class="col card mb-4  mt-3 left  top">
             <div class="card-body">
-                <!-- The post content goes inside the card-text. -->
-                <!-- Use the | safe filter inside the template tags -->
                 <p class="card-text">
                     {{ post.content | safe }}
                 </p>
@@ -98,8 +76,6 @@
     <div class="col-md-8 card mb-4  mt-3 ">
       <h3>Comments:</h3>
       <div class="card-body">
-        <!-- We want a for loop inside the empty control tags
-          to iterate through each comment in comments -->
         {% for comment in comments %}
          <div class="p-2 comments
           {% if not comment.approved and comment.author == user %}
@@ -128,7 +104,6 @@
 
 
         </div>
-        <!-- Our for loop ends here -->
         {% endfor %}
       </div>
     </div>
@@ -153,7 +128,7 @@
       </div>
   </div>
 </div>
-
+<!--related post container-->
 <div class="container mt-5">
   <h3>Similar Posts</h3>
   <div class="row">
@@ -197,9 +172,6 @@
         <a id="deleteConfirm" href="#" class="btn
           btn-danger">Delete</a>
       </div>
-
-
-
 
 
 {% endblock content %}
