--- a/adventure_finder/templates/base.html
+++ b/adventure_finder/templates/base.html
@@ -49,7 +49,7 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link {% if request.path == about_url %}active{% endif %}" aria-current="page"
-                            href="{% url 'about' %}">About</a>
+                            href="{% url 'about' %}">About/Contact Us</a>
                     </li>
                     {% if user.is_authenticated %}
                     <li class="nav-item">
