--- a/adventure_finder/static/css/style.css
+++ b/adventure_finder/static/css/style.css
@@ -50,7 +50,6 @@ body {
 }
 
 .main-bg {
-   /* background-color: #83C0CF;*/
     background-color: rgba(113, 169, 183, 1)
 }
 
@@ -257,4 +256,19 @@ body {
 
 .btn-close:hover {
     opacity: 1;
+}
+
+/*tag posts styles*/
+
+.tag-box {
+  display: inline-block;
+  background-color: #D2C0A7; /* brand */
+  color: #fff;
+  padding: 0.4rem 0.8rem;
+  margin: 0.3rem;
+  font-size: 0.85rem;
+  font-weight: 600;
+  border-radius: 2rem;
+  box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+  transition: background-color 0.3s ease;
 }
